# emuobject

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
emuobject/: Emu.py  EmuExceptions.py
html/emuobject/: Emu.html  EmuExceptions.html  index.html
tests/: test_basic.py
